{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 26,
  "lineage": "1b92e6ba-6bd3-5272-3bba-abca3482586f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:779136181681:instance/i-08cdd2507b425ac37",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cdd2507b425ac37",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a946119b1017ff4e",
            "private_dns": "ip-10-0-1-213.ec2.internal",
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-100-24-125-62.compute-1.amazonaws.com",
            "public_ip": "100.24.125.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04a24bb7ae8cd6e8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071761082b7fc2c11",
            "tags": {
              "Name": "jenkins-master-tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f96ff1ed219f659"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw_east",
            "aws_key_pair.master-key",
            "aws_main_route_table_association.set-east-region-rt-assoc",
            "aws_route_table.rt_east",
            "aws_security_group.jenkins-sg-east",
            "aws_subnet.subnet_1_east",
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-workers",
      "each": "list",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0528a5175983e7f28",
            "arn": "arn:aws:ec2:us-west-2:779136181681:instance/i-099b218394f19c314",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099b218394f19c314",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d192225f333e2b4",
            "private_dns": "ip-192-168-1-51.us-west-2.compute.internal",
            "private_ip": "192.168.1.51",
            "public_dns": "ec2-34-222-27-224.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.27.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03a1302792f3d80d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb9577cd3e6ad68e",
            "tags": {
              "Name": "jenkins_worker_tf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02da8ab3e5b036065"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.gw_east",
            "aws_internet_gateway.gw_west",
            "aws_key_pair.master-key",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.set-east-region-rt-assoc",
            "aws_main_route_table_association.set-west-region-rt-assoc",
            "aws_route_table.rt_east",
            "aws_route_table.rt_west",
            "aws_security_group.jenkins-sg-east",
            "aws_security_group.jenkins-sg-west",
            "aws_subnet.subnet_1_east",
            "aws_subnet.subnet_1_west",
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_east",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779136181681:internet-gateway/igw-0045cfff1976ddf6f",
            "id": "igw-0045cfff1976ddf6f",
            "owner_id": "779136181681",
            "tags": {
              "Name": "gw-east"
            },
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_west",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779136181681:internet-gateway/igw-0fc04a5ac8b3513ee",
            "id": "igw-0fc04a5ac8b3513ee",
            "owner_id": "779136181681",
            "tags": {
              "Name": "gw-west"
            },
            "vpc_id": "vpc-0ece9f540cf95a31c"
          },
          "dependencies": [
            "aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-listener-http",
      "provider": "provider.aws.region-east",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:779136181681:targetgroup/app-lb-tg/4396864493036dce",
            "arn_suffix": "targetgroup/app-lb-tg/4396864493036dce",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:779136181681:targetgroup/app-lb-tg/4396864493036dce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins-master-attach",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:779136181681:targetgroup/app-lb-tg/4396864493036dce-20201012200319865100000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:779136181681:targetgroup/app-lb-tg/4396864493036dce",
            "target_id": "i-08cdd2507b425ac37"
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.gw_east",
            "aws_key_pair.master-key",
            "aws_lb_target_group.app-lb-tg",
            "aws_main_route_table_association.set-east-region-rt-assoc",
            "aws_route_table.rt_east",
            "aws_security_group.jenkins-sg-east",
            "aws_subnet.subnet_1_east",
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-east-region-rt-assoc",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09159f07650300f83",
            "original_route_table_id": "rtb-0a8c935e2c31f1185",
            "route_table_id": "rtb-0aa78bb54971b0191",
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_internet_gateway.gw_east",
            "aws_route_table.rt_east",
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-west-region-rt-assoc",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0177558e7fcf4a68f",
            "original_route_table_id": "rtb-0d2fad1a0fe226ecb",
            "route_table_id": "rtb-07a0be6a1eef02850",
            "vpc_id": "vpc-0ece9f540cf95a31c"
          },
          "dependencies": [
            "aws_internet_gateway.gw_west",
            "aws_route_table.rt_west",
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_east",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aa78bb54971b0191",
            "owner_id": "779136181681",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0045cfff1976ddf6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0c182b623ad9449b0"
              }
            ],
            "tags": {
              "Name": "East-Region-RT"
            },
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_internet_gateway.gw_east",
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_west",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a0be6a1eef02850",
            "owner_id": "779136181681",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc04a5ac8b3513ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0c182b623ad9449b0"
              },
              {
                "cidr_block": "10.0.2.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0c182b623ad9449b0"
              }
            ],
            "tags": {
              "Name": "West-Region-RT"
            },
            "vpc_id": "vpc-0ece9f540cf95a31c"
          },
          "dependencies": [
            "aws_internet_gateway.gw_west",
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg-east",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779136181681:security-group/sg-09f96ff1ed219f659",
            "description": "Allow TCP/22 from IG external IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f96ff1ed219f659",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP/22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP/8080 from *",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "Allow traffic from us-west-2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "779136181681",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg-west",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779136181681:security-group/sg-02da8ab3e5b036065",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02da8ab3e5b036065",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow traffic from us-east-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg-oregon",
            "name_prefix": "",
            "owner_id": "779136181681",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ece9f540cf95a31c"
          },
          "dependencies": [
            "aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779136181681:security-group/sg-0f243fc7189a36807",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f243fc7189a36807",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic to jenkins-sg",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f96ff1ed219f659"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "779136181681",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg-east",
            "aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_east",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779136181681:subnet/subnet-071761082b7fc2c11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-071761082b7fc2c11",
            "map_public_ip_on_launch": false,
            "owner_id": "779136181681",
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_west",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779136181681:subnet/subnet-0eb9577cd3e6ad68e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0eb9577cd3e6ad68e",
            "map_public_ip_on_launch": false,
            "owner_id": "779136181681",
            "vpc_id": "vpc-0ece9f540cf95a31c"
          },
          "dependencies": [
            "aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2_east",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779136181681:subnet/subnet-0a96da66a6f5b4410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a96da66a6f5b4410",
            "map_public_ip_on_launch": false,
            "owner_id": "779136181681",
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_vpc.vpc_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_east",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779136181681:vpc/vpc-088ca8d12a0c95d15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e9feb5d4d5d45c5",
            "default_route_table_id": "rtb-0a8c935e2c31f1185",
            "default_security_group_id": "sg-0cb3556fa6c9628fe",
            "dhcp_options_id": "dopt-74ee7d0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-088ca8d12a0c95d15",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a8c935e2c31f1185",
            "owner_id": "779136181681",
            "tags": {
              "Name": "vpc-east"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_west",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779136181681:vpc/vpc-0ece9f540cf95a31c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08dfddad4f6c0b4a4",
            "default_route_table_id": "rtb-0d2fad1a0fe226ecb",
            "default_security_group_id": "sg-0fb7422789cd91618",
            "dhcp_options_id": "dopt-ff8ff987",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ece9f540cf95a31c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d2fad1a0fe226ecb",
            "owner_id": "779136181681",
            "tags": {
              "Name": "vpc-west"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "useast1-uswest2",
      "provider": "provider.aws.region-east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0c182b623ad9449b0",
            "peer_owner_id": "779136181681",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0ece9f540cf95a31c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-088ca8d12a0c95d15"
          },
          "dependencies": [
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept_peering",
      "provider": "provider.aws.region-west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0c182b623ad9449b0",
            "peer_owner_id": "779136181681",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0ece9f540cf95a31c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-088ca8d12a0c95d15",
            "vpc_peering_connection_id": "pcx-0c182b623ad9449b0"
          },
          "dependencies": [
            "aws_vpc.vpc_east",
            "aws_vpc.vpc_west",
            "aws_vpc_peering_connection.useast1-uswest2"
          ]
        }
      ]
    }
  ]
}